i managed to get it working